Thu Dec  3 08:55:27 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/KeyedSamples/descriptors/run_test.pl:
          Reduced log level.

Thu Dec  3 08:47:23 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/KeyedSamples/Receiver/Keyed_Test_Receiver.idl:
        * connectors/dds4ccm/tests/KeyedSamples/Receiver/Keyed_Test_Receiver_exec.h:
        * connectors/dds4ccm/tests/KeyedSamples/Receiver/Keyed_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/KeyedSamples/descriptors/Plan.cdp:
        * connectors/dds4ccm/tests/KeyedSamples/descriptors/run_test.pl:
          Adapted to the update Reader port.

        * connectors/dds4ccm/tests/Reader/Receiver/Reader_Test_Receiver_exec.cpp:
          Minor code optimization.

Thu Dec  3 08:28:57 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/SubscriberListener_T.cpp:
        * connectors/dds4ccm/impl/ndds/SubscriberListener_T.h:
          Don't handle data_on_readers, if we install this listener,
          the data reader listener will not get any on_data_available

Wed Dec  2 14:57:57 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/NodeApplication/ComponentAttributesSetter.cpp:
          Use the word error to trigger the scoreboard parser

Wed Dec  2 14:19:49 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/Reader_T.cpp:
          Used operators to file readinfo sequences.

        * connectors/dds4ccm/impl/ndds/SampleInfo.h:
          Removed <== operator for readinfo_seq. Also added
          instance handle when copying sample_info.

        * connectors/dds4ccm/tests/Reader/Receiver/Reader_Test_Receiver_exec.h:
        * connectors/dds4ccm/tests/Reader/Receiver/Reader_Test_Receiver_exec.cpp:
          Added handle tests and test exceptions related to handles.

        * connectors/dds4ccm/tests/Reader/Sender/Reader_Test_Sender_exec.cpp:
          Changed timing.
