@@ -1,3 +1,8 @@
+Wed Dec  3 08:56:57 UTC 2009  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
+
+        * connectors/dds4ccm/tests/CSLSampleRejected/Sender/CSL_SRTest_Sender_exec.h:
+          Solved initialize warnings.
+
 Thu Dec  3 08:55:27 UTC 2009  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/tests/KeyedSamples/descriptors/run_test.pl:
